--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
     </footer>
   </div>
 
-  <script crs="/javascript/logout.js"></script>
+  <script src="/javascript/logout.js"></script>
 </body>
 
 </html>
